# mac-login-items

./: .travis.yml  README.md  package.json  setup.cfg  setup.py
scripts/: .login-items-add  .login-items-names  .login-items-paths  .login-items-rm  login-items  login-items-add  login-items-paths  login-items-rm
tests/mac-login-items/examples/: add.sh  names.sh  paths.sh  rm.sh
