# setup.cfg generator: https://pypi.org/project/setupcfg/
[metadata]
name = mac-login-items
version = 2019.02.28
url = https://github.com/looking-for-a-job/mac-login-items
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = mac

[options]
install_requires = 
	setuptools
scripts = 
	scripts/.login-items-add
	scripts/.login-items-names
	scripts/.login-items-paths
	scripts/.login-items-rm
	scripts/login-items
